--- a/app/src/main/res/layout/chats.xml
+++ b/app/src/main/res/layout/chats.xml
@@ -16,6 +16,17 @@
 		android:orientation="vertical"
 		android:background="@drawable/left">
 		<TextView
+			android:id="@+id/name_left"
+			android:focusable="false"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginLeft="15dp"
+			android:padding="5dp"
+			android:text="bitnobber"
+			android:textSize="12sp"
+			android:textColor="#212121"
+			android:layout_gravity="left" />
+		<TextView
 			android:id="@+id/text_left"
 			android:focusable="false"
 			android:layout_width="wrap_content"
@@ -50,6 +61,17 @@
 		android:orientation="vertical"
 		android:layout_gravity="right|center_vertical"
 		android:background="@drawable/right">
+		<TextView
+			android:id="@+id/name_right"
+			android:focusable="false"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginRight="15dp"
+			android:padding="5dp"
+			android:text="bitnobber"
+			android:textSize="12sp"
+			android:textColor="#212121"
+			android:layout_gravity="left" />
 		<TextView
 			android:id="@+id/text_right"
 			android:focusable="false"
