--- a/app/src/main/res/layout/videocall.xml
+++ b/app/src/main/res/layout/videocall.xml
@@ -13,7 +13,6 @@
 		<WebView
 			android:id="@+id/webview1"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:layout_marginBottom="40dp" />
+			android:layout_height="match_parent" />
 	</LinearLayout>
 </LinearLayout>
